home page code added!

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,6 +5,10 @@
 @import './themes/index';
 @import './utilities/index';
 
+@import './pages/header.scss';
+@import './pages/homepage.scss';
+@import './pages/footer.scss';
+
 
 
 
