--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -2,11 +2,58 @@
 @import './variables';
 
 /* Base Styles */
-:global {
-  /* Google Fonts */
-  @import url('https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700,800,900|Poppins:100,200,300,400,500,600,700,800,900&display=swap');
+/* Google Fonts */
+// @import url('https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700,800,900|Poppins:100,200,300,400,500,600,700,800,900&display=swap');
 
-  body {
+
+@font-face {
+    font-family: 'apercu-pro';
+    src: url('../../fonts/Apercu Pro/apercu_regular_pro.otf');
+    //src: url('assets/fonts/creabbb_-webfont.eot?#iefix') format('embedded-opentype'), url('assets/fonts/creabbb_-webfont.woff') format('woff'), url('assets/fonts/creabbb_-webfont.ttf') format('truetype'), url('assets/fonts/creabbb_-webfont.svg#CreativeBlockBBBold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'apercu-italic';
+    src: url('../../fonts/Apercu Pro/apercu_regular_italic_pro.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'apercu-medium';
+    src: url('../../fonts/Apercu Pro/apercu_medium_pro.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'apercu-bold';
+    src: url('../../fonts/Apercu Pro/apercu_bold_pro.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'circular-pro';
+    src: url('../../fonts/Circular LL/lineto-circular-pro-black.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'circular-bold';
+    src: url('../../fonts/Circular LL/lineto-circular-pro-bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'circular-medium';
+    src: url('../../fonts/Circular LL/lineto-circular-pro-medium.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'circular-pro-book';
+    src: url('../../fonts/Circular LL/lineto-circular-pro-book.ttf') format('truetype');
+}
+
+body {
     font: 1.2vw map-get($font-families, secondary);
     line-height: 1.4em;
     color: map-get($theme, dark);
@@ -16,36 +63,36 @@
     overflow-x: hidden;
 
     @media (max-width: 768px) {
-      font-size: 4.2vw;
+        font-size: 4.2vw;
     }
-  }
+}
 
-  h1, h2 {
+h1, h2 {
     font-weight: bold;
-  }
+}
 
-  h3 {
+h3 {
     font-weight: 600;
-  }
+}
 
-  h4, h5, h6 {
+h4, h5, h6 {
     font-weight: 300;
-  }
+}
 
-  h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: map-get($font-families, primary);
-  }
+}
 
-  h2 {
+h2 {
     font-size: 2.7vw;
     font-weight: map-get($typography-weights, medium);
     line-height: 1;
-    @media (max-width: 768px) {
-      font-size: 6.5vw;
-      font-weight: 600;
-    }
-  }
 
-  p, a, button {
-  }
+    @media (max-width: 768px) {
+        font-size: 6.5vw;
+        font-weight: 600;
+    }
+}
+
+p, a, button {
 }
