--- a/styles/pages/_footer.scss
+++ b/styles/pages/_footer.scss
@@ -1,17 +1,13 @@
-﻿$font: 'AvenirNext-regular',sans-serif,arial;
-$font-m: 'AvenirNext-medium',sans-serif,arial;
-$font-b: 'AvenirNext-bold',sans-serif,arial;
-
-$heading-size: 46px;
+﻿$heading-size: 46px;
 $primary-font: 'apercu-pro';
 $primary-font-bold: 'apercu-bold';
-$primary-font-italic: 'apercu-italic';            
-$primary-font-medium: 'apercu-medium';            
+$primary-font-italic: 'apercu-italic';
+$primary-font-medium: 'apercu-medium';
 
 $secondary-font: 'circular-pro';
 $secondary-font-bold: 'circular-bold';
-$secondary-font-medium: 'circular-medium'; 
-$secondary-font-book: 'circular-pro-book'; 
+$secondary-font-medium: 'circular-medium';
+$secondary-font-book: 'circular-pro-book';
 
 html, body {
     margin: 0 auto;
