--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -5,10 +5,9 @@
 /* Google Fonts */
 // @import url('https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700,800,900|Poppins:100,200,300,400,500,600,700,800,900&display=swap');
 
-
 @font-face {
     font-family: 'apercu-pro';
-    src: url('../../fonts/Apercu Pro/apercu_regular_pro.otf');
+    src: url('../fonts/Apercu Pro/apercu_regular_pro.otf');
     //src: url('assets/fonts/creabbb_-webfont.eot?#iefix') format('embedded-opentype'), url('assets/fonts/creabbb_-webfont.woff') format('woff'), url('assets/fonts/creabbb_-webfont.ttf') format('truetype'), url('assets/fonts/creabbb_-webfont.svg#CreativeBlockBBBold') format('svg');
     font-weight: normal;
     font-style: normal;
@@ -16,41 +15,41 @@
 
 @font-face {
     font-family: 'apercu-italic';
-    src: url('../../fonts/Apercu Pro/apercu_regular_italic_pro.otf') format('opentype');
+    src: url('../fonts/Apercu Pro/apercu_regular_italic_pro.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'apercu-medium';
-    src: url('../../fonts/Apercu Pro/apercu_medium_pro.otf') format('opentype');
+    src: url('../fonts/Apercu Pro/apercu_medium_pro.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'apercu-bold';
-    src: url('../../fonts/Apercu Pro/apercu_bold_pro.otf') format('opentype');
+    src: url('../fonts/Apercu Pro/apercu_bold_pro.otf') format('opentype');
 }
 
 @font-face {
     font-family: 'circular-pro';
-    src: url('../../fonts/Circular LL/lineto-circular-pro-black.ttf') format('truetype');
+    src: url('../fonts/Circular LL/lineto-circular-pro-black.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'circular-bold';
-    src: url('../../fonts/Circular LL/lineto-circular-pro-bold.ttf') format('truetype');
+    src: url('../fonts/Circular LL/lineto-circular-pro-bold.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'circular-medium';
-    src: url('../../fonts/Circular LL/lineto-circular-pro-medium.ttf') format('truetype');
+    src: url('../fonts/Circular LL/lineto-circular-pro-medium.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'circular-pro-book';
-    src: url('../../fonts/Circular LL/lineto-circular-pro-book.ttf') format('truetype');
+    src: url('../fonts/Circular LL/lineto-circular-pro-book.ttf') format('truetype');
 }
 
 body {
