--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,9 +5,8 @@
 @import './themes/index';
 @import './utilities/index';
 
-@import './pages/header.scss';
-@import './pages/homepage.scss';
-@import './pages/footer.scss';
+@import './pages/index';
+
 
 
 
