--- a/styles/pages/_homepage.scss
+++ b/styles/pages/_homepage.scss
@@ -11,10 +11,18 @@ $secondary-font-book: 'circular-pro-book';
 
 @import '../base/variables';
 
+html,
+body {
+    overflow-x: hidden;
+}
+
+
 .common-container {
     .heading-section {
-        /*padding: 80px 0px 84px;*/
-        padding: 191px 111px 84px;
+        padding: 80px 100px 84px;
+        /*padding: 191px 111px 84px;*/
+          /*padding: 80px 185px;*/
+          margin-top: 80px;
 
         .tag-line {
             font-size: $heading-size;
@@ -22,7 +30,7 @@ $secondary-font-book: 'circular-pro-book';
             letter-spacing: -0.2px;
             text-align: left;
             font-family: $secondary-font-bold;
-            padding: 80px 1px 20px;
+            /*padding: 80px 1px 20px;*/
         }
 
         .sub-tag-line {
@@ -34,23 +42,35 @@ $secondary-font-book: 'circular-pro-book';
         }
     }
 
-    .hero-image {
+    /*.hero-video {
+            .myVideo {
+                position: fixed;
+                right: 0;
+                bottom: 0;
+                min-width: 100%; 
+                min-height: 100%;
+                height:750px;
+        }
+    }*/
+
+    /*.hero-image {
         height: 696px;
         margin-top: 2%;
         background: url(../images/company-image.png) bottom no-repeat;
-    }
+    }*/
 
     .our-work {
-        /*height: 900px;*/
+        padding: 10px 99px;
+        max-width: 1350px;
+        margin: 0 auto;
         .case-study {
-            border: 1px solid #fff;
-            ;
+            border: 1px solid #fff;            
             position: relative;
             bottom: 88px;
             border-radius: 5px;
 
             .case-study-text {
-                padding: 0px 63px 0px;
+                /*padding: 0px 63px;*/
                 margin-top: 44px;
 
                 .heading {
@@ -68,6 +88,13 @@ $secondary-font-book: 'circular-pro-book';
                     color: #000000;
                     font-family: $secondary-font-bold;
                     margin-top: 10px;
+
+                    @media only screen and (max-width: 800px){
+                        /*font-size:*/ 
+                    }
+                    @include break-large-to-small(xMedium){
+                         /*font-size:*/ 
+                    }
                 }
 
                 .para-detail {
@@ -79,9 +106,15 @@ $secondary-font-book: 'circular-pro-book';
                     margin-top: 20px;
                 }
             }
+            }
         }
 
         .project-section {
+                max-width: 1350px;
+                margin: 0 auto;
+            .illustration {
+                margin-left: 15%;
+            }       
             .illustration-path {
                 background: url(../images/Path.svg) no-repeat;
                 height: 558px;
@@ -99,11 +132,11 @@ $secondary-font-book: 'circular-pro-book';
                 background: url('../images/award-badge.png') no-repeat;
                 height: 100px;
                 margin-left: 64%;
-            }
+            }          
 
             .project-text {
                 margin-top: 10%;
-
+                margin-right: 15%;
                 .project-heading {
                     font-size: 26px;
                     line-height: 36px;
@@ -138,7 +171,7 @@ $secondary-font-book: 'circular-pro-book';
                     letter-spacing: -0.2px;
                     color: #3B3B3B;
                     font-family: $primary-font;
-                    padding: 21px 52px;
+                    padding: 21px 65px;
                 }
 
                 a:hover {
@@ -157,10 +190,14 @@ $secondary-font-book: 'circular-pro-book';
         }
 
         .what-we-do {
-            margin-top: 100px;
-
+            max-width: 1350px;
+            padding: 10px 99px;
+            margin: 0 auto;
             .work-tag-line {
-                padding: 0px 63px;
+                padding: 0px 50px;
+                margin-top: 100px;
+                /*padding: 0 91px 0 116px;*/
+                /*padding: 0 201px 0 256px;*/
 
                 .heading {
                     font-size: 14px;
@@ -190,8 +227,10 @@ $secondary-font-book: 'circular-pro-book';
             }
 
             .service-icons {
-                margin-left: 9.5%;
+                margin-left: 7%;
+                /*padding: 0 215px;*/
                 margin-top: 7%;
+                /*padding: 0px 400px 0 487px;*/
 
                 .discovery {
                     background: url(../images/discovery.svg) no-repeat;
@@ -234,7 +273,9 @@ $secondary-font-book: 'circular-pro-book';
         }
         .cta {
             margin-top: 20px;
-            margin-left: 9.5%;
+            margin-left: 7%;
+            /*padding: 0 215px;*/          
+            /*padding: 0px 400px 0 487px;*/
             a {
                 text-decoration: none;
             }           
@@ -245,9 +286,13 @@ $secondary-font-book: 'circular-pro-book';
         }
 
         .our-partners {
-            margin-top: 192px;
+            max-width: 1350px;
+            padding: 10px 99px;
+            margin: 0 auto;
             .work-tag-line {
-                padding: 0px 58px;
+                padding: 0px 35px;
+                margin-top: 192px;
+                /*padding: 0 116px 0 113px;*/
                 position: relative;
                 .heading {
                     font-size: 14px;
@@ -258,7 +303,8 @@ $secondary-font-book: 'circular-pro-book';
                     .quo-txt {
                         position: absolute;
                         top: -17px;
-                        left: 11.5em;
+                        /*left: 11.5em;*/
+                        left: 15.4em;
                     }
                 }
 
@@ -272,7 +318,10 @@ $secondary-font-book: 'circular-pro-book';
             }
           }
             .partners-logo {
-                padding: 80px 60px;
+                /*padding: 80px 102px;*/
+                padding: 80px 67px;
+                max-width: 1350px;
+                margin: 0 auto;
                 .item-list {
                     height: 130px;
                     border-radius: 10px;
@@ -331,12 +380,17 @@ $secondary-font-book: 'circular-pro-book';
                 }
             }
         }
+       
         .partner-reviews {
             height: 1010px;
             background: linear-gradient(180deg, #E8EFF2 0%, #EBF1F4 61.71%, #FFFFFF 100%); 
             .work-tag-line {
-                padding: 0 58px;
-                margin-top: 100px;
+                /*padding: 0 99px;*/
+                /*padding: 0 116px 0 112px;*/
+                /*margin-top: 100px;*/
+                max-width: 1350px;
+                padding: 0 92px;
+                margin: 0 auto;
             .heading{
                 font-size: 14px;
                 line-height: 18px;
@@ -363,6 +417,7 @@ $secondary-font-book: 'circular-pro-book';
            }
             .testimonials-wrapper {
                 margin-top: 78px;
+                padding: 0 93px 93px;
                 .video-testimonial {
                     height: 404px;
                     width: 380px;
@@ -446,5 +501,263 @@ $secondary-font-book: 'circular-pro-book';
                 }
             }
         }
+        .upm-wrapper {           
+            .work-tag-line {
+                padding: 0 116px 0 112px;
+                margin-top: 100px;
+                .heading {
+                    font-size: 14px;
+                    line-height: 18px;
+                    letter-spacing: -.2px;
+                    color: #01C4CF;
+                    font-family: "circular-medium";
+                }
+                .title-heading {
+                    font-size: 36px;
+                    line-height: 44px;
+                    letter-spacing: -.2px;
+                    color: #000;
+                    font-family: circular-bold;
+                    margin-top: 10px;
+                }
+                .para-detail {
+                    font-size: 18px;
+                    line-height: 28px;
+                    letter-spacing: -.2px;
+                    color: #3B3B3B;
+                    font-family: apercu-pro;
+                    margin-top: 20px;
+                }
+            }
+            .single {
+                    max-width: 58%;
+                    margin-left: 17%;
+                    margin-top: 20px;
+
+                .input-group-btn {
+                        display: inline-flex;
+                    }
+            .form-control {
+                    height: 50px;
+                    background-color: #fff;
+                    border-radius: 5px;              
+                  }
+            .form-control:focus {
+                    box-shadow: none;
+            } 
+            .btn-theme {
+                border-radius: 5px;
+                background: #01C4CF;
+                color: #fff;
+                border: 1px;
+                padding: 13px 32px;
+                font-size: 16px;
+                }
+            .ext-txt {
+                margin-top: 4%;
+            }
+            .medium-btn {
+                border-radius: 5px;	
+                background-color: #01C4CF;
+                padding: 12px 10.7px 14px 37.43px;
+                color: #fff;
+                font-size: 16px;
+                line-height: 24px;
+              }
+            .item-text {
+                color: #3B3B3B;	
+                font-family: map-get($font-families, primary);	
+                font-size: 16px;	
+                letter-spacing: -0.2px;	
+                line-height: 24px;
+                margin-top: 10.8px;
+             }
+           }
+        }
+    }
+
+@media only screen and (max-width: 800px) {
+    .common-container 
+       { 
+        .heading-section {
+        padding: 10px 19px;
+        .tag-line {
+            font-size: 25px;
+            line-height: 32px;
+        }
+        .sub-tag-line {
+            margin-top: 20px;
+            }
+          }
+        .hero-video {
+            margin-top: 20px;
+        }
+      }
+    }
+
+@media only screen and (max-width: 800px) {
+    .common-container .our-work {        
+            padding: 10px 10px;
+            .case-study {
+                bottom: 44px;
+                .case-study-text {
+                    margin-top: 0;
+                    .title-heading {
+                        font-size: 22px;
+                        line-height: 30px;
+                    }
+                }
+            }
+        }
+    } 
+
+@media only screen and (max-width: 800px) {
+    .common-container {
+        .project-section {
+            .project-text {
+                margin-right: 0;
+                padding: 10px 10px;
+                .project-heading {
+                    padding-left: 0;
+                    font-size: 22px;
+                    line-height: 30px;
+                }
+                .project-tag {
+                    padding-left: 0;
+                }
+                .project-detail {
+                    display: none;
+                }
+                .action-cta {
+                    margin-left: 0;
+                }
+            }
+        }
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .common-container {
+        .what-we-do {
+            padding: 10px 7px;
+            .work-tag-line {
+                padding: 0;
+                .title-heading {
+                    font-size: 22px;
+                    line-height: 30px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .common-container .what-we-do {
+        .service-icons {
+            margin-left: 0;
+            position: relative;
+            .discovery {
+                width: 64px;
+            }
+            .service-heading {
+                position: absolute;
+                left: 31%;
+                top: 18%;
+                margin-top: 0;
+            }
+            .service-para {
+                position: inherit;
+                left: 28%;
+                width: 194px;
+                bottom: 3%;
+                margin-top: 0;
+            }
+        }
+        .cta {
+            margin-left: 0;
+        }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .common-container {
+        .our-partners {
+            padding: 0 9px;
+            .work-tag-line {
+                padding: 0;
+                margin-top: 100px;
+                .title-heading {
+                    font-size: 22px;
+                    line-height: 30px;
+                }
+            }
+        }
+    } 
+} 
+
+@media only screen and (max-width: 800px) {
+    .common-container {
+        .partner-reviews {
+            padding: 10px 9px;
+            margin-top: 100px;
+            .work-tag-line {
+                padding: 0;
+                margin-top: 0;
+                .title-heading {
+                    font-size: 22px;
+                    line-height: 30px;
+                }
+            }
+            .testimonials-wrapper {
+                padding: 0;
+                .video-testimonial {
+                    display: none;
+                }
+                .bottom-testimonial {
+                    display: none;
+                }
+                .text-testimonial {
+                    display: none;
+                }
+            }
+        }
+    } 
+}
+
+@media only screen and (max-width:800px) {
+    .common-container {
+        .upm-wrapper {
+            .work-tag-line {
+                padding: 0;
+                .title-heading {
+                    font-size: 22px;
+                    line-height: 30px;
+                }
+            }
+            .single {
+                max-width: 100%;
+                margin-left: 0;
+                position: relative;
+                .item-text {
+                    position: absolute;
+                }
+                .input-group-btn {
+                    position: absolute;
+                    top: 220%;
+                    display: block;
+                }
+                .btn-theme {
+                    display: block;
+                }
+                .medium-btn {
+                    display: block;
+                    margin-top: 10px;
+                }
+                .ext-txt {
+                    margin-top:20px;
+                }
+            }
+        } 
+    } 
+}
+
