--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -1,3 +1,10 @@
-﻿@import '_header.scss';
+﻿// header
+@import '_header.scss';
+@import '_header-common.scss';
+
+// pages
 @import '_homepage.scss';
+@import '_lucid-dreaming.scss';
+
+// footer
 @import '_footer.scss';
