--- a/styles/pages/_homepage.scss
+++ b/styles/pages/_homepage.scss
@@ -410,7 +410,7 @@ body {
                                width: 12%;
                                display: table-cell;
                                vertical-align: middle;
-                               background: url(../../images/playBtn.svg) no-repeat;
+                               background: url(../images/playBtn.svg) no-repeat;
                            }
                            .detail {
                                padding: 13px;
